--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-emotion": "^6.6.0",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-typography": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.34.0"
+    "react-typography": "^0.16.20",
+    "sass": "^1.34.0",
+    "typography": "^0.16.21",
+    "typography-theme-kirkham": "^0.16.19"
   }
 }
